# Qryptex

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: workflow.yml
src/: main.py  qryptex.py
src/qryptex/: .main.py.swp  .qryptex.py.swo  .qryptex.py.swp  __init__.py  main.py  qryptex.py
src/test/: test_qryptex.py
src/tests/: test_qryptex.py
temp/: freeze.txt  freeze_formate.txt
